# context-overlay

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: config.yaml
src/context_overlay/: __init__.py  cli.py  config.py  matching.py  server.py  skills.py  transforms.py
tests/: test_cli.py  test_end_to_end_echo.py  test_matching.py  test_server.py  test_skills.py  test_transforms.py  test_version.py
